# transparent-windows

./: Cargo.toml  build.rs  readme.md  resources.rc  rust-toolchain.toml  rustfmt.toml  tray-icon.rc
.cargo/: Config.toml
icons/: appicon.aps  res.lib  resources.rc  rust-transparent.psd
src/: app_state.rs  main.rs  monitor.rs  transparency.rs  tray.rs  util.rs  win_utils.rs  window_config.rs
ui/: config_prompt.slint  hover-info.slint  main.slint  percentage.slint  rules.slint
