[package]
edition="2021"
name   ="rust-transparent"
version="0.1.0"

[build-dependencies]
embed-resource="3.0.1"
slint-build   ="1.9.1"

[dependencies]
anyhow="1.0.95"
directories="5.0.1"
embed-resource="3.0.1"
serde={ version="1.0.217", default-features=false, features=["derive"] }
serde_json={ version="1.0.135", default-features=false, features=["std"] }
slint={ version="1.9.1", default-features=false, features=[
  "backend-winit",
  "compat-1-2",
  "renderer-software",
  "std",
] }
tokio={ version="1.42.0", default-features=false, features=[
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tray-item="0.10.0"

windows={ version="0.59.0", default-features=false, features=[
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
