[package]
authors    =["Ethan Henry"]
description="Set the transparency of windows, for Windows!"
edition    ="2021"
keywords   =["transparency", "windows"]
name       ="win_alpha"
readme     ="readme.md"
repository ="https://github.com/tadghh/transparent-windows"
version    ="1.2.6"

[[bin]]
name="win_alpha"
path="src/main.rs"

[target.'cfg(windows)'.dependencies]
[package.metadata]
os=["windows"]

[profile.release]
codegen-units  =1
debug          =false
incremental    =false
lto            ="fat"
opt-level      =3
overflow-checks=false
panic          ="abort"
rpath          =false
strip          =true

[build-dependencies]
embed-resource="2.5"
slint-build   ="1.9.2"

[dependencies]
anyhow           ="1.0.95"
crossbeam-channel={ version="0.5.14", default-features=false, features=["std"] }
directories      ="5.0.1"
tray-item        ="0.10.0"

serde={ version="1.0.217", default-features=false, features=["derive"] }
serde_json={ version="1.0.138", default-features=false, features=["std"] }
slint={ version="1.9.2", default-features=false, features=[
  "backend-winit",
  "compat-1-2",
  "renderer-software",
  "std",
] }
tokio={ version="1.43.0", default-features=false, features=[
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
windows={ version="0.59.0", default-features=false, features=[
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
